# Project_Programmers

./: README.md
2nd_ObstacleAvoidance/maze_runner/: CMakeLists.txt
2nd_ObstacleAvoidance/maze_runner/config/: config.yaml
2nd_ObstacleAvoidance/maze_runner/launch/: mazerunner.launch
2nd_ObstacleAvoidance/maze_runner/src/: main.cpp
3rd_mid_GazeboSimulation/mid_project/: CMakeLists.txt  package.xml
3rd_mid_GazeboSimulation/mid_project/launch/: gazebo.launch  rviz.launch  spawn.launch
3rd_mid_GazeboSimulation/mid_project/models/custom_mid_obj/: model.config  model.sdf
3rd_mid_GazeboSimulation/mid_project/rviz/: view.rviz
3rd_mid_GazeboSimulation/mid_project/scripts/: obstacle_avoidance.py
3rd_mid_GazeboSimulation/mid_project/src/: moving_plugin_bottom.cc  moving_plugin_left.cc  moving_plugin_right.cc  moving_plugin_top.cc
3rd_mid_GazeboSimulation/mid_project/urdf/: robot.gazebo  robot.xacro
3rd_mid_GazeboSimulation/mid_project/worlds/: walls.world
4th_ServingRobot/final_project/: CMakeLists.txt  README.md  package.xml
4th_ServingRobot/final_project/config/: amcl_params.yaml  costmap_common.yaml  planner.yaml
4th_ServingRobot/final_project/launch/: amcl.launch  amcl_demo.launch  costa_navigation.launch  costa_waypoint.launch  map_server.launch  move_base.launch  start_costa_waypoint.launch
4th_ServingRobot/final_project/maps/: costa_map.pgm  costa_map.yaml  costa_map_original.pgm
4th_ServingRobot/final_project/rviz/: costa_nav.rviz
4th_ServingRobot/final_project/scripts/: costa_follow_waypoints.py  waypoint_publisher.py
(+2 files in other folders)
